# WEYT

NEOYOU/: README-MANG.md  README.md
NEOYOU/backend/: Dockerfile
NEOYOU/backend/src/: auth.rs  database.rs  monetization.rs  users.rs
NEOYOU/frontend/: Dockerfile
NEOYOU/frontend/src/app/: globals.css
NEOYOU/frontend/src/components/: create-post.tsx  header.tsx  recommended-videos.tsx  trending-videos.tsx  video-player.tsx
NEOYOU/nginx/: nginx.conf
VIONEX/: README.md  docker-compose.yml  setup.bat  setup.sh
VIONEX-2/backend/: Cargo.toml
VIONEX-2/backend/src/: main.rs
VIONEX-2/backend/src/controllers/: ai_controller.rs  auth_controller.rs  user_controller.rs  video_controller.rs
VIONEX-2/backend/src/models/: ai.rs  payment.rs  user.rs  video.rs
VIONEX-2/backend/src/repositories/: user_repository.rs
VIONEX-2/backend/src/services/: user_service.rs
VIONEX-2/frontend/: .env.example  next.config.js  tailwind.config.js  tsconfig.json
VIONEX-2/frontend/src/app/: globals.css  layout.tsx  page.tsx
VIONEX/.github/workflows/: ci-cd.yml
VIONEX/ai/: Dockerfile  requirements.txt
VIONEX/ai/src/: main.py
VIONEX/backend/: Cargo.toml
VIONEX/backend/src/: admin.rs  ai.rs  config.rs  creators.rs  main.rs  moderation.rs  streaming.rs  utils.rs  videos.rs
VIONEX/database/: init.sql
VIONEX/database/clickhouse/: config.xml  users.xml
VIONEX/frontend/: package-lock.json  package.json  tsconfig.json
VIONEX/frontend/.next/: trace
VIONEX/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
VIONEX/frontend/.next/cache/webpack/server-development/: index.pack.gz.old
VIONEX/frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
VIONEX/frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found_client-reference-manifest.js  page_client-reference-manifest.js
VIONEX/frontend/.next/static/chunks/: _error.js  app-pages-internals.js  reactPlayerDailyMotion.js  reactPlayerFacebook.js  reactPlayerFilePlayer.js  reactPlayerKaltura.js  reactPlayerMixcloud.js  reactPlayerMux.js  reactPlayerPreview.js  reactPlayerSoundCloud.js  reactPlayerStreamable.js  reactPlayerTwitch.js  reactPlayerVidyard.js  reactPlayerVimeo.js  reactPlayerWistia.js  reactPlayerYouTube.js  webpack.js
VIONEX/frontend/.next/static/chunks/app/: not-found.js  page.js
VIONEX/frontend/.next/static/chunks/fallback/: amp.js  webpack.js
VIONEX/frontend/.next/static/webpack/: webpack.0b4f566bddcc5b9a.hot-update.js  webpack.8bf65f98e3dccbec.hot-update.js
VIONEX/frontend/src/app/: layout.tsx  page.tsx
VIONEX/frontend/src/components/: admin-panel.tsx  sidebar.tsx  video-grid.tsx
VIONEX/monitoring/: monitoring-config.yml  prometheus.yml
VIONEX/monitoring/grafana/datasources/: datasource.yml
VIONEX/nginx/conf.d/: rust.conf
VIONEX/security/: security-config.yml
WEYT/: AI_recommendation-engine.js  ai-engine.js  index.html  neuralstream-ai.js  neuralstream-interactions.js  script.js  styles.css
