[package]
name = "video-platform-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
bytes = "1.5"
mime = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
elasticsearch = { version = "8.5", features = ["rustls-tls"] }
clickhouse = { version = "0.11", features = ["tokio"] }
lapin = "2.3"
amqplib = "1.0"
tokio-amqp = "1.0"
opencv = { version = "0.88", features = ["opencv-4"] }
ffmpeg-next = { version = "6.0", optional = true }
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tonic-build = "0.11"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
url = "2.5"
form_data = "0.13"
actix-cors = "0.7"
actix-multipart = "0.6"
rust-s3 = { version = "0.33", features = ["tokio-rustls-tls"] }
aws-sdk-s3 = "1.23"
aws-config = "1.0"
aws-credential-types = "1.0"
image = "0.25"
imageproc = "0.25"
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"
async-trait = "0.1"
tower = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http-body = "0.4"
pin-project = "1.1"
tower-http = { version = "0.5", features = ["full"] }
utoipa = { version = "4.0", features = ["actix-web", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }